--- a/personal-portfolio/style.css
+++ b/personal-portfolio/style.css
@@ -31,8 +31,15 @@ body {
   font-size: 1.5rem;
 }
 
+#welcome-section h1 {
+  margin-right: 63rem;
+}
+
 #welcome-section h2 {
   opacity: 0.6;
+  text-align: justify;
+  width: 51rem;
+  margin-right: 15rem;
 }
 
 nav {
@@ -47,7 +54,6 @@ nav {
   height: 3.6rem;
   width: 100vw;
   background-color: var(--dark);
-  font-size: 1.2rem;
   font-size: 1.5rem;
   overflow-y: hidden;
   z-index: 1;
@@ -167,16 +173,26 @@ nav {
   text-shadow: 0 0 3px var(--pink);
 }
 
+.footer-links div {
+  padding: 15px;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+}
+
+.footer-links a {
+  color: whitesmoke;
+  text-decoration: none;
+}
+
 .footer-links a:focus {
   outline: none;
   color: var(--pink);
   text-shadow: 0 0 6px var(--light-pink);
 }
 
-.footer-links a {
-  color: whitesmoke;
-  text-decoration: none;
-  padding: 15px;
+.icon {
+  vertical-align: middle;
 }
 
 .footer-text {
@@ -185,10 +201,14 @@ nav {
   text-align: right;
   color: whitesmoke;
   text-transform: lowercase;
+  width: fit-content;
+  align-self: flex-end;
 }
 
-.touch {
+.touch,
+.touch p {
   text-decoration: none;
+  color: whitesmoke;
 }
 
 .touch:focus {
@@ -223,4 +243,87 @@ h6 a {
 .span2 {
   letter-spacing: -5px;
   font-size: 21px;
+}
+
+/* Media Queries */
+
+@media screen and (prefers-reduced-motion: reduce) {
+  * {
+    animation-duration: 0.001ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.001ms !important;
+  }
+}
+
+@media screen and (max-width: 1260px) {
+  #welcome-section h1 {
+    margin-right: 12rem;
+    width: fit-content;
+    height: fit-content;
+    margin-top: 6rem;
+    border-top: 2.1px solid var(--pink);
+  }
+
+  #welcome-section h2 {
+    font-size: 1.5rem;
+    opacity: 0.6;
+    text-align: left;
+    width: 15rem;
+    margin-right: 0;
+    margin-left: 3rem;
+  }
+
+  nav {
+    justify-content: center;
+    padding: 0;
+    font-size: 1.2rem;
+    gap: 0.3rem;
+  }
+
+  #navbar a {
+    text-decoration: overline 2.1px var(--pink);
+  }
+
+  #span1 {
+    margin-left: 3.6rem;
+  }
+
+  .project-tile img {
+    width: 15rem;
+    height: auto;
+  }
+
+  .footer-links {
+    flex-direction: column;
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 1260px) {
+  #welcome-section h1 {
+    margin-right: 45rem;
+    border-top: none;
+  }
+  
+  #welcome-section h2 {
+    font-size: 1.5rem;
+    opacity: 0.6;
+    text-align: left;
+    width: 51rem;
+    margin-right: 0;
+    margin-left: 3rem;
+  }
+
+  nav {
+    justify-content: flex-end;
+    padding: 0;
+    font-size: 1.2rem;
+    gap: 0.3rem;
+    padding-right: 2.1rem;
+    gap: 2.1rem;
+  }
+
+  #navbar a {
+    text-decoration: none;
+  }
 }
